@@ -1,5 +1,5 @@
-// flow-typed signature: 90317a286ecbd89f3b88eb85e716ddb4
-// flow-typed version: <<STUB>>/@babel/core_v^7.4.0/flow_v0.96.0
+// flow-typed signature: f9ce5b944d6802a562649660e3c46b76
+// flow-typed version: <<STUB>>/@babel/core_v^7.4.3/flow_v0.96.0
 
 /**
  * This is an autogenerated libdef stub for:
