@@ -1,5 +1,5 @@
-// flow-typed signature: d1371116008460213d926cc206a1d755
-// flow-typed version: <<STUB>>/@babel/preset-env_v^7.4.2/flow_v0.96.0
+// flow-typed signature: c48f89dc24c96871cbe461a64bded15f
+// flow-typed version: <<STUB>>/@babel/preset-env_v^7.4.3/flow_v0.96.0
 
 /**
  * This is an autogenerated libdef stub for:
