@@ -1,5 +1,5 @@
-// flow-typed signature: f52efc8eeab393bc095481dd6fc0c615
-// flow-typed version: <<STUB>>/rollup-plugin-commonjs_v^9.2.3/flow_v0.96.0
+// flow-typed signature: f1a0ff74fdcf45f93509ae3d8cfd1924
+// flow-typed version: <<STUB>>/rollup-plugin-commonjs_v^9.3.4/flow_v0.96.0
 
 /**
  * This is an autogenerated libdef stub for:
