@@ -1,5 +1,5 @@
-// flow-typed signature: 530227e8bc61221b829b193989c9becc
-// flow-typed version: <<STUB>>/rollup-plugin-node-resolve_v^4.0.1/flow_v0.96.0
+// flow-typed signature: f2c94ac91307aaa8eef82910460eb2bb
+// flow-typed version: <<STUB>>/rollup-plugin-node-resolve_v^4.2.1/flow_v0.96.0
 
 /**
  * This is an autogenerated libdef stub for:
