@@ -1,5 +1,5 @@
-// flow-typed signature: d9b61cb670757f1344c03d05d1f1ec55
-// flow-typed version: <<STUB>>/rollup_v^1.8.0/flow_v0.96.0
+// flow-typed signature: e7aabba9be02483c0c0a36f0ec770d0a
+// flow-typed version: <<STUB>>/rollup_v^1.9.0/flow_v0.96.0
 
 /**
  * This is an autogenerated libdef stub for:
