@@ -315,9 +315,9 @@ function makePptx(genobj, new_type, options, gen_private, type_info) {
 
     outString +=
       '</p:sldIdLst><p:sldSz cx="' +
-      gen_private.type.pptx.pptWidth +
+      (gen_private.type.pptx.pptWidthSLD || gen_private.type.pptx.pptWidth) +
       '" cy="' +
-      gen_private.type.pptx.pptHeight +
+      (gen_private.type.pptx.pptHeightSLD || gen_private.type.pptx.pptHeight) +
       '" type="' +
       gen_private.type.pptx.pptType +
       '"/><p:notesSz cx="' +
