@@ -51,13 +51,21 @@ function MakeWidescreenPlugin(pluginsman) {
 MakeWidescreenPlugin.prototype.extendPptxApi = function(docObj) {
   var funcThis = this
 
-  docObj.setSlideSize = function(cx, cy, sizeType) {
+  docObj.setSlideSize = function(cx, cy, sizeType, cxSLD, cySLD) {
     if (cx && typeof cx === 'number') {
       funcThis.pptxData.pptWidth = cx * funcThis.pptxData.EMUS_PER_PT
     } // Endif.
 
     if (cy && typeof cy === 'number') {
       funcThis.pptxData.pptHeight = cy * funcThis.pptxData.EMUS_PER_PT
+    } // Endif.
+
+    if (cySLD && typeof cxSLD === 'number') {
+      funcThis.pptxData.pptWidthSLD = cxSLD * funcThis.pptxData.EMUS_PER_PT
+    } // Endif.
+
+    if (cySLD && typeof cySLD === 'number') {
+      funcThis.pptxData.pptHeightSLD = cySLD * funcThis.pptxData.EMUS_PER_PT
     } // Endif.
 
     /*
