@@ -1,7 +1,7 @@
 {
   "name": "officegen",
   "description": "Office Open XML Generator using Node.js streams. Supporting Microsoft Office 2007 and later Word (docx), PowerPoint (pptx,ppsx) and Excel (xlsx). This module is for all frameworks and environments. No need for any commandline tool - this module is doing everything inside it.",
-  "version": "0.4.9-0",
+  "version": "0.5.0",
   "author": {
     "name": "Ziv Barber",
     "url": "https://github.com/Ziv-Barber"
@@ -56,7 +56,7 @@
   },
   "dependencies": {
     "archiver": "~3.0.0",
-    "async": "^2.6.1",
+    "async": "^2.6.2",
     "fast-image-size": "^0.1.3",
     "jszip": "^3.2.1",
     "lodash": "^4.17.11",
@@ -65,9 +65,9 @@
     "xmlbuilder": "^12.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.4.0",
+    "@babel/core": "^7.4.3",
     "@babel/node": "^7.2.2",
-    "@babel/preset-env": "^7.4.2",
+    "@babel/preset-env": "^7.4.3",
     "@babel/preset-flow": "^7.0.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
@@ -97,15 +97,15 @@
     "eslint-plugin-standard": "^4.0.0",
     "flow-bin": "^0.96.0",
     "flow-typed": "^2.5.1",
-    "mocha": "^6.0.2",
+    "mocha": "^6.1.0",
     "npm-run-all": "^4.1.5",
     "prettier": "1.16.4",
     "rimraf": "^2.6.3",
-    "rollup": "^1.8.0",
+    "rollup": "^1.9.0",
     "rollup-plugin-babel": "^4.3.2",
-    "rollup-plugin-commonjs": "^9.2.3",
+    "rollup-plugin-commonjs": "^9.3.4",
     "rollup-plugin-json": "^4.0.0",
-    "rollup-plugin-node-resolve": "^4.0.1",
+    "rollup-plugin-node-resolve": "^4.2.1",
     "rollup-plugin-terser": "^4.0.4",
     "sinon": "^7.3.1"
   },
